Do not need to follow symlinks

--- a/install/mellivora.apache.conf
+++ b/install/mellivora.apache.conf
@@ -17,7 +17,7 @@
    </Directory>
 
    <Directory "/var/www/ctf.yourdomain.com/htdocs/">
-      Options -Indexes +FollowSymLinks +MultiViews
+      Options -Indexes +MultiViews
       AllowOverride None
       Order Deny,Allow
       Allow from all
