Added explicit mod_deflate values to example config

--- a/install/mellivora.apache.conf
+++ b/install/mellivora.apache.conf
@@ -43,6 +43,20 @@
       ExpiresByType text/css "access plus 1 month"
    </IfModule>
 
+   # apache output compression
+   <IfModule mod_deflate.c>
+      <IfModule mod_filter.c>
+         # these are known to be safe with MSIE 6
+         AddOutputFilterByType DEFLATE text/html text/plain text/xml
+
+         # everything else may cause problems with MSIE 6
+         AddOutputFilterByType DEFLATE text/css
+         AddOutputFilterByType DEFLATE application/x-javascript application/javascript application/ecmascript
+         AddOutputFilterByType DEFLATE application/rss+xml
+         AddOutputFilterByType DEFLATE application/xml
+      </IfModule>
+   </IfModule>
+
    # limit number of requests/interval
    <IfModule mod_evasive20.c>
       DOSHashTableSize    3097
