Added JSON support for scoreboard

--- a/install/mellivora.apache.conf
+++ b/install/mellivora.apache.conf
@@ -54,6 +54,7 @@
          AddOutputFilterByType DEFLATE application/x-javascript application/javascript application/ecmascript
          AddOutputFilterByType DEFLATE application/rss+xml
          AddOutputFilterByType DEFLATE application/xml
+         AddOutputFilterByType DEFLATE application/json
       </IfModule>
    </IfModule>
 
@@ -70,7 +71,7 @@
       DOSWhitelist   127.0.0.1
    </IfModule>
 
-   # SSL
+   # ssl
    SSLEngine on
    SSLCertificateFile    /etc/ssl/certs/ssl-cert-snakeoil.pem
    SSLCertificateKeyFile /etc/ssl/private/ssl-cert-snakeoil.key
