--- a/install/mellivora.apache.conf
+++ b/install/mellivora.apache.conf
@@ -8,7 +8,7 @@
 
    ServerAdmin contact@yourdomain.com
    ServerName ctf.yourdomain.com
-   DocumentRoot /var/www/ctf.yourdomain.com/htdocs/
+   DocumentRoot /var/www/mellivora/htdocs/
 
    <Directory />
       Order Deny,Allow
@@ -16,7 +16,7 @@
       AllowOverride None
    </Directory>
 
-   <Directory "/var/www/ctf.yourdomain.com/htdocs/">
+   <Directory "/var/www/mellivora/htdocs/">
       Options -Indexes +MultiViews
       AllowOverride None
       Order Deny,Allow
@@ -25,11 +25,11 @@
    </Directory>
 
    # error log
-   ErrorLog /var/log/apache2/ctf-yourdomain-com-error.log
+   ErrorLog /var/log/apache2/ctf.yourdomain.com-error.log
    LogLevel warn
 
    # access log
-   CustomLog /var/log/apache2/ctf-yourdomain-com-access.log combined
+   CustomLog /var/log/apache2/ctf.yourdomain.com-access.log combined
 
    # set browser cache expiry times
    <IfModule mod_expires.c>
