--- a/include/config/config.inc.php.example
+++ b/include/config/config.inc.php.example
@@ -113,6 +113,7 @@ const CONFIG_CACHE_TIME_HINTS = 0;
 const CONFIG_CACHE_TIME_FILES = 0;
 const CONFIG_CACHE_TIME_COUNTRIES = 0;
 const CONFIG_CACHE_TIME_DYNAMIC = 0;
+const CONFIG_CACHE_TIME_REGISTER = 0;
 
 // user tracking and statistics
 const CONFIG_SEGMENT_IO_KEY = '';
