simplify config by moving path definitions to constants

--- a/include/config/config.inc.php.example
+++ b/include/config/config.inc.php.example
@@ -11,18 +11,9 @@
 
 // paths below must end in a "/" !
 const CONFIG_PATH_BASE = '/var/www/mellivora/';
-// don't change these definitions unless you know what you're doing
-define('CONFIG_PATH_INCLUDE', CONFIG_PATH_BASE . 'include/');
-define('CONFIG_PATH_LAYOUT', CONFIG_PATH_INCLUDE . 'layout/');
-define('CONFIG_PATH_THIRDPARTY', CONFIG_PATH_BASE . 'include/thirdparty/');
-define('CONFIG_PATH_THIRDPARTY_COMPOSER', CONFIG_PATH_THIRDPARTY . 'composer/vendor/');
-define('CONFIG_PATH_CONFIG', CONFIG_PATH_BASE . 'include/config/');
-define('CONFIG_PATH_FILE_WRITABLE', CONFIG_PATH_BASE . 'writable/');
-define('CONFIG_PATH_FILE_UPLOAD', CONFIG_PATH_FILE_WRITABLE . 'upload/');
-define('CONFIG_PATH_CACHE', CONFIG_PATH_FILE_WRITABLE . 'cache/');
 
 // database settings
-require(CONFIG_PATH_CONFIG . 'db.inc.php');
+require('db.inc.php');
 
 // general site settings
 const CONFIG_SITE_NAME = 'Mellivora';
