update install instructions

--- a/install/mellivora.apache.conf
+++ b/install/mellivora.apache.conf
@@ -25,11 +25,11 @@
    </Directory>
 
    # error log
-   ErrorLog /var/log/apache2/ctf.yourdomain.com-error.log
+   ErrorLog /var/log/apache2/mellivora-error.log
    LogLevel warn
 
    # access log
-   CustomLog /var/log/apache2/ctf.yourdomain.com-access.log combined
+   CustomLog /var/log/apache2/mellivora-access.log combined
 
    # set browser cache expiry times
    <IfModule mod_expires.c>
