option to move static resources to separate domain

--- a/include/config/config.inc.php.example
+++ b/include/config/config.inc.php.example
@@ -23,6 +23,7 @@ const CONFIG_SITE_NAME = 'Mellivora';
 const CONFIG_SITE_SLOGAN = 'Mellivora, the CTF engine';
 const CONFIG_SITE_DESCRIPTION = '';
 const CONFIG_SITE_URL = 'https://localhost/';
+const CONFIG_SITE_URL_STATIC_RESOURCES = 'https://localhost/';
 const CONFIG_SITE_ADMIN_RELPATH = 'admin/';
 define('CONFIG_SITE_ADMIN_URL', CONFIG_SITE_URL . CONFIG_SITE_ADMIN_RELPATH);
 
