better user tracking throughout site

--- a/include/config/config.inc.php.example
+++ b/include/config/config.inc.php.example
@@ -55,7 +55,7 @@ const CONFIG_LOG_VALIDATION_FAILURE_ID = true;
 
 // maximum file upload size
 const CONFIG_MAX_FILE_UPLOAD_SIZE = 5242880;
-const CONFIG_APPEND_MD5_TO_DOWNLOADS = true;
+const CONFIG_APPEND_MD5_TO_DOWNLOADS = false;
 
 // email stuff
 const CONFIG_EMAIL_USE_SMTP = false;
