--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
         "phpmailer/phpmailer": "dev-master",
         "pear/Cache_Lite": "dev-master",
         "aws/aws-sdk-php": "2.*"
+    },
+    "require-dev": {
+        "codeception/codeception": "*"
     }
 }
