--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ php:
   - 5.4
 
 before_script:
-  - composer install --dev --prefer-dist
+  - composer self-update
+  - composer install --dev
 
 script:
-  - "wget http://codeception.com/codecept.phar"
-  - php ./codecept.phar build
-  - php ./codecept.phar run
+  - wget http://codeception.com/codecept.phar
+  - php codecept.phar build
+  - php codecept.phar run
