--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: php
 php:
-  - 5.4
+  - 5.5.9
 
 before_script:
   - composer self-update
-  - composer install --dev
+  - composer install
 
 script:
   - wget http://codeception.com/codecept.phar
