--- a/include/config/config.inc.php.example
+++ b/include/config/config.inc.php.example
@@ -22,8 +22,8 @@ const CONFIG_SITE_LANGUAGE = 'en';
 const CONFIG_SITE_NAME = 'Mellivora';
 const CONFIG_SITE_SLOGAN = 'Mellivora, the CTF engine';
 const CONFIG_SITE_DESCRIPTION = '';
-const CONFIG_SITE_URL = 'https://localhost/';
-const CONFIG_SITE_URL_STATIC_RESOURCES = 'https://localhost/';
+const CONFIG_SITE_URL = 'http://localhost/';
+const CONFIG_SITE_URL_STATIC_RESOURCES = 'http://localhost/';
 const CONFIG_SITE_ADMIN_RELPATH = 'admin/';
 define('CONFIG_SITE_ADMIN_URL', CONFIG_SITE_URL . CONFIG_SITE_ADMIN_RELPATH);
 
@@ -43,7 +43,7 @@ const CONFIG_ACCOUNTS_DEFAULT_ENABLED = true;
 const CONFIG_ACCOUNTS_EMAIL_PASSWORD_ON_SIGNUP = false;
 
 // is site SSL compatible? if true, ssl will be forced on certain pages
-const CONFIG_SSL_COMPAT = true;
+const CONFIG_SSL_COMPAT = false;
 
 // session & cookie expiry time in seconds
 // 0 = until browser is closed
