--- a/tests/codeception/acceptance.suite.yml
+++ b/tests/codeception/acceptance.suite.yml
@@ -8,5 +8,11 @@ class_name: AcceptanceTester
 modules:
     enabled:
         - PhpBrowser:
-            url: http://localhost/myapp
+            url: http://mellivora/
+        - Db:
+            dsn: 'mysql:host=localhost;dbname=mellivora_ci'
+            user: 'root'
+            password: ''
+            dump: 'tests/codeception/_data/dump.sql'
+            populate: true
         - \Helper\Acceptance
