longer wait time for webdriver tests

--- a/tests/codeception/acceptance.suite.yml
+++ b/tests/codeception/acceptance.suite.yml
@@ -17,4 +17,5 @@ modules:
             dump: 'tests/codeception/_data/sql/dump.sql'
             populate: true
             cleanup: false
+            wait: 5
         - \Helper\Acceptance
