fix travis builds

--- a/install/mellivora.apache.conf
+++ b/install/mellivora.apache.conf
@@ -14,7 +14,7 @@
       Options -Indexes +MultiViews
       AllowOverride None
       Order Deny,Allow
-      Allow from all
+      Require all granted
       AddType application/x-httpd-php .php
    </Directory>
 
