--- a/include/config/config.inc.php.example
+++ b/include/config/config.inc.php.example
@@ -99,6 +99,7 @@ const CONFIG_GET_IP_HOST_BY_ADDRESS = true;
 
 // cache times
 const CONFIG_CACHE_TIME_SCORES = 0;
+const CONFIG_CACHE_TIME_GRAPH = 0;
 const CONFIG_CACHE_TIME_HOME = 0;
 const CONFIG_CACHE_TIME_USER = 0;
 const CONFIG_CACHE_TIME_CHALLENGE = 0;
