--- a/install/CaddyFile
+++ b/install/CaddyFile
@@ -1,4 +1,9 @@
 ctf.yourdomain.com { 
-        root /var/www/mellivora
-        fastcgi / /var/run/php/php7.0-fpm.sock php
+	root /var/www/ctf/htdocs
+	log /var/log/caddy/ctf.youdomain.com.log
+  fastcgi / /var/run/php-fpm/php-fpm-caddy.sock php
+  rewrite {
+    to {path} {path}/ {path}.php /index.php?p={uri}
+  }
+}
 }
