--- a/include/config/db.inc.php.example
+++ b/include/config/db.inc.php.example
@@ -1,2 +1,8 @@
 <?php
 
+Config::set('MELLIVORA_CONFIG_DB_ENGINE', 'mysql');
+Config::set('MELLIVORA_CONFIG_DB_HOST', 'localhost');
+Config::set('MELLIVORA_CONFIG_DB_PORT', 3306);
+Config::set('MELLIVORA_CONFIG_DB_NAME', 'mellivora');
+Config::set('MELLIVORA_CONFIG_DB_USER', 'root');
+Config::set('MELLIVORA_CONFIG_DB_PASSWORD', '');
