--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,13 @@
 version: '3'
 services:
   app:
+    image: mellivora
+    ports:
+      - 80:80
+      - 443:443
+    build:
+      context: .
+      dockerfile: Dockerfile
     environment:
       MELLIVORA_CONFIG_DB_ENGINE: mysql
       MELLIVORA_CONFIG_DB_HOST: db
