--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,19 +1,11 @@
 version: '3'
 services:
-  mellivora:
-    environment:
-      MELLIVORA_CONFIG_SITE_URL: http://mellivora/
-      MELLIVORA_CONFIG_SITE_URL_STATIC_RESOURCES: http://mellivora/
-  db:
-    volumes:
-      - dbdata:/var/lib/mysql # TODO need to make sure the db is blanked on each run
-      - ./install/sql:/docker-entrypoint-initdb.d
   codecept:
     image: eccube/php7-ext-codeception
     depends_on:
       - chrome
-      - mellivora
-      - db
+      - mellivora-test
+      - db-test
     volumes:
       - .:/project
   chrome:
@@ -24,3 +16,33 @@ services:
     dns: 8.8.4.4
     environment:
       - no_proxy=localhost
+  mellivora-test:
+    image: mellivora-test
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      MELLIVORA_CONFIG_DB_ENGINE: mysql
+      MELLIVORA_CONFIG_DB_HOST: db-test
+      MELLIVORA_CONFIG_DB_PORT: 3306
+      MELLIVORA_CONFIG_DB_NAME: mellivora
+      MELLIVORA_CONFIG_DB_USER: meldbuser
+      MELLIVORA_CONFIG_DB_PASSWORD: password
+      MELLIVORA_CONFIG_SITE_URL: http://mellivora-test/
+      MELLIVORA_CONFIG_SITE_URL_STATIC_RESOURCES: http://mellivora-test/
+    volumes:
+      - .:/var/www/mellivora
+      - composerdependencies:/var/www/mellivora/include/thirdparty/composer
+    links:
+      - db-test
+  db-test:
+    image: mysql:5.6
+    environment:
+      MYSQL_DATABASE: mellivora
+      MYSQL_USER: meldbuser
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: password
+    volumes:
+      - ./install/sql:/docker-entrypoint-initdb.d
+volumes:
+  composerdependencies:
