--- a/tests/codeception/acceptance.suite.yml
+++ b/tests/codeception/acceptance.suite.yml
@@ -8,12 +8,13 @@ class_name: AcceptanceTester
 modules:
     enabled:
         - WebDriver:
-            url: http://mellivora/
+            url: http://mellivora-test/
             browser: chrome
+            host: chrome
         - Db:
-            dsn: 'mysql:host=localhost;dbname=mellivora_ci'
+            dsn: 'mysql:host=db-test;port=3306;dbname=mellivora'
             user: 'root'
-            password: ''
+            password: 'password'
             dump: 'tests/codeception/_data/sql/dump.sql'
             populate: true
             cleanup: false
