--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "ircmaxell/password-compat": "dev-master",
         "ircmaxell/random-lib": "1.0.*@dev",
         "google/recaptcha": "~1.1",
-        "phpmailer/phpmailer": "dev-master",
-        "pear/Cache_Lite": "dev-master",
+        "phpmailer/phpmailer": "5.*",
+        "pear/Cache_Lite": "~1.8",
         "aws/aws-sdk-php": "3.*"
     }
 }
